<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_explore_banner" >

    <RelativeLayout
        android:id="@+id/top_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="@string/wandou_regist"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/regist"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:text="@string/wandou_game_group"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_explore_cover_history_normal" />

            <ImageView
                android:id="@+id/catogery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:src="@drawable/ic_explore_cover_tool_normal" />

            <TextView
                android:id="@+id/update"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginTop="2dp"
                android:background="#99ff0000"
                android:gravity="center"
                android:text="17"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/top_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <ImageView
            android:id="@+id/img_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_explore_searchbox_search" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_big"
            android:paddingLeft="5dp"
            android:text="@string/wandou_search"
            android:textColor="#44000000"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/img_erwei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/aa_qr_scan" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="30dp" >

        <RelativeLayout
            android:id="@+id/layout_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_explore_app_pressed" />

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_app"
                android:layout_centerHorizontal="true"
                android:paddingTop="1dp"
                android:text="@string/wandou_app"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_explore_game_pressed" />

            <TextView
                android:id="@+id/tv_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_game"
                android:layout_centerHorizontal="true"
                android:paddingTop="1dp"
                android:text="@string/wandou_game"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_explore_video_pressed" />

            <TextView
                android:id="@+id/tv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_video"
                android:layout_centerHorizontal="true"
                android:paddingTop="1dp"
                android:text="@string/wandou_video"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_explore_book_pressed" />

            <TextView
                android:id="@+id/tv_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_book"
                android:layout_centerHorizontal="true"
                android:paddingTop="1dp"
                android:text="@string/wandou_book"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_explore_cover_more_normal" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_more"
                android:layout_centerHorizontal="true"
                android:paddingTop="1dp"
                android:text="@string/wandou_more"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>